--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egjs/react-infinitegrid": "^4.6.0",
     "mongodb": "^4.8.1",
     "next": "12.2.3",
     "react": "18.2.0",
